backend/vulnerability_analysis/testing/bof2/segments/klee-out-1/test000001.exec.err
Error: external call with symbolic argument: __ubsan_handle_sub_overflow
File: testing/bof2/segments/segment_2_klee.c
Line: 12
assembly.ll line: 7845
State: 3
Stack: 
	#000007845 in __klee_posix_wrapped_main() at testing/bof2/segments/segment_2_klee.c:12
	#100006064 in __user_main(1, 140355490021376, 140355490021392) at src/runtime/POSIX/klee_init_env.c:245
	#200000518 in __uClibc_main(140339711049728, 1, 140355490021376, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#300000683 in main(1, 140355490021376)
